crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_match_suggests_regex.txt
(identifier) #match? @name "test"
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:14
  |
1 | (identifier) #match? @name "test"
  |              ^^^^^^^
  |
help: use `(node =~ /re/)`
